--- a/level 0/homeworks/day 005/hw5.html
+++ b/level 0/homeworks/day 005/hw5.html
@@ -16,7 +16,7 @@ text formation ტექსტის ფორმატირებით შე
     <u>i love goa</u>
     <br>
     <b>i love goa</b> -->
-            <p>i love programing</p>
+            <p>i love goa</p>
                 <img src="shevlohah.jpg" alt="">
     
     
